--- a/DocumentLicenta/References.bib
+++ b/DocumentLicenta/References.bib
@@ -51,10 +51,9 @@ pages={6479-6488}}
 
 @misc{2020keras,
   title={Keras description},
-  author={Chollet, Fran\c{c}ois and others},
-  year={2020},
-  month={04},
-  URL = {https://keras.io}
+  key={zz5},
+  howpublished = {\url{https://keras.io},},
+  note = {Accesat la data de : 2020-04-25}
 }
 
 @article{fox2017status,
@@ -74,7 +73,7 @@ edition = {1st}
 }
 
 @misc{2020EC2,
-  key={z1},
+  key={zz1},
   title={Amazon EC2 description},
   note = {Accesat la data de : 25-04-2020},
   howpublished = {\url{https://aws.amazon.com/ec2/},}  
@@ -82,21 +81,21 @@ edition = {1st}
 
 
 @misc{2020S3,
-  key={z2},
+  key={zz2},
   title={Amazon S3 description},
   note = {Accesat la data de : 25-04-2020},
   howpublished = {\url{https://aws.amazon.com/s3/}}.
 }
 
 @misc{2020autoscaling,
-  key={z3},
+  key={zz3},
   title={Amazon autoscaling description},
   note = {Accesat la data de : 25-04-2020},
   howpublished = {\url{https://aws.amazon.com/autoscaling/}},
 }
 
 @misc{2020elb,
-  key={z4},
+  key={zz4},
   title={Amazon elastic load balancing description},
   note = {Accesat la data de : 25-04-2020},
   howpublished = {\url{https://aws.amazon.com/elasticloadbalancing/}},
@@ -145,4 +144,85 @@ author={L. {Jiao} and F. {Zhang} and F. {Liu} and S. {Yang} and L. {Li} and Z. {
   eprint = {1603.07285},
   year={2016},
   month={mar}
+}
+@article{smeureanu2018,
+  author    = {Radu Tudor Ionescu and
+               Sorina Smeureanu and
+               Marius Popescu and
+               Bogdan Alexe},
+  title     = {Detecting abnormal events in video using Narrowed Motion Clusters},
+  journal   = {CoRR},
+  volume    = {abs/1801.05030},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1801.05030},
+  archivePrefix = {arXiv},
+  eprint    = {1801.05030},
+  timestamp = {Mon, 13 Aug 2018 16:46:21 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1801-05030.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{alexe2018,
+  author    = {Radu Tudor Ionescu and
+               Sorina Smeureanu and
+               Bogdan Alexe and
+               Marius Popescu},
+  title     = {Unmasking the abnormal events in video},
+  journal   = {CoRR},
+  volume    = {abs/1705.08182},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1705.08182},
+  archivePrefix = {arXiv},
+  eprint    = {1705.08182},
+  timestamp = {Mon, 13 Aug 2018 16:46:34 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/IonescuSAP17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@inproceedings{hannah2004,
+  title={Detecting inexplicable behaviour},
+  author={Hannah M. Dee and David C. Hogg},
+  booktitle={BMVC},
+  year={2004}
+}
+@inproceedings{shet2006,
+author = {Shet, Vinay and Harwood, David and Davis, Larry},
+year = {2006},
+month = {05},
+pages = {119-132},
+title = {Multivalued Default Logic for Identity Maintenance in Visual Surveillance},
+journal = {Proc Eur Conf Comput Vis},
+doi = {10.1007/11744085_10}
+}
+@inproceedings{dutta2015,
+  title={Online Detection of Abnormal Events Using Incremental Coding Length},
+  author={Jayanta K. Dutta and Bonny Banerjee},
+  booktitle={AAAI},
+  year={2015}
+}
+@INPROCEEDINGS{zhao2011,  
+author={B. {Zhao} and L. {Fei-Fei} and E. P. {Xing}}, 
+ booktitle={CVPR 2011},   
+title={Online detection of unusual events in videos via dynamic sparse coding},   
+year={2011},  
+volume={},  
+number={},  
+pages={3313-3320},}
+@INPROCEEDINGS{borislav2011,  author={B. {Antić} and B. {Ommer}},  booktitle={2011 International Conference on Computer Vision},   title={Video parsing for abnormality detection},   year={2011},  volume={},  number={},  pages={2415-2422},}
+@INPROCEEDINGS{lu2013,  author={C. {Lu} and J. {Shi} and J. {Jia}},  booktitle={2013 IEEE International Conference on Computer Vision},   title={Abnormal Event Detection at 150 FPS in MATLAB},   year={2013},  volume={},  number={},  pages={2720-2727},}
+@inproceedings{xu2015,
+author = {Xu, Dan and Ricci, Elisa and Yan, Yan and Song, Jingkuan and Sebe, Nicu},
+year = {2015},
+month = {09},
+pages = {},
+title = {Learning Deep Representations of Appearance and Motion for Anomalous Event Detection},
+doi = {10.5244/C.29.8}
+}
+@inproceedings{sobokrou2017,
+author = {Sabokrou, Mohammad and Fayyaz, Mohsen and Fathy, Mahmood and Klette, Reinhard},
+year = {2017},
+month = {02},
+pages = {},
+title = {Deep-Cascade: Cascading 3D Deep Neural Networks for Fast Anomaly Detection and Localization in Crowded Scenes},
+volume = {PP},
+journal = {IEEE Transactions on Image Processing},
+doi = {10.1109/TIP.2017.2670780}
 }
